--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@prisma/client": "^6.12.0",
     "bcrypt-ts": "^7.1.0",
     "next": "15.4.1",
     "next-auth": "^4.24.11",
     "pg": "^8.16.3",
     "prisma": "^6.12.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,7 +28,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4"
   }
 }
